[gd_scene load_steps=12 format=2]

[ext_resource path="res://gfx/gui/hud/bars3.png" type="Texture" id=1]
[ext_resource path="res://gfx/gui/hud/hud2.png" type="Texture" id=2]
[ext_resource path="res://fonts/SuperTux-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ui/Gui.gd" type="Script" id=4]
[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=5]
[ext_resource path="res://gfx/gui/hud/bars1.png" type="Texture" id=6]
[ext_resource path="res://gfx/gui/hud/bars2.png" type="Texture" id=7]
[ext_resource path="res://gfx/gui/hud/hud1.png" type="Texture" id=8]
[ext_resource path="res://gfx/gui/hud/ranks-2/Sprite-0002.png" type="Texture" id=9]
[ext_resource path="res://gfx/gui/hud/ranks-2/Sprite-0001.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Ranks" type="Node2D" parent="."]
visible = false

[node name="Rank-back" type="Sprite" parent="Ranks"]
position = Vector2( 20, 57 )
texture = ExtResource( 10 )

[node name="Rank-back2" type="Sprite" parent="Ranks"]
position = Vector2( 20, 57 )
texture = ExtResource( 9 )

[node name="rank" type="Label" parent="Ranks"]
margin_left = 13.0
margin_top = 47.0
margin_right = 53.0
margin_bottom = 73.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.482353 )
text = "D"

[node name="combometer" type="Node2D" parent="."]

[node name="Combo" type="Label" parent="combometer"]
margin_left = 328.0
margin_top = 10.0
margin_right = 388.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 71, -3 )
size_flags_stretch_ratio = 0.52
custom_colors/font_color = Color( 0, 0.396078, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "combo:"

[node name="Hud2" type="Sprite" parent="combometer"]
position = Vector2( 361, 33 )
texture = ExtResource( 2 )

[node name="Bars3" type="Sprite" parent="combometer"]
position = Vector2( 329, 33 )
texture = ExtResource( 1 )

[node name="Templabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 229.0
margin_right = 62.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 24, 9 )
size_flags_stretch_ratio = 0.52
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Scount" type="Label" parent="."]
margin_left = 37.0
margin_top = 29.0
margin_right = 97.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 71, -3 )
size_flags_stretch_ratio = 0.52
custom_colors/font_color = Color( 0.709804, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "j"

[node name="Timer" type="Label" parent="."]
margin_left = 4.0
margin_top = 76.0
margin_right = 64.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 71, -3 )
size_flags_stretch_ratio = 0.52
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "00:00:00"

[node name="Hud1" type="Sprite" parent="."]
position = Vector2( 65, 65 )
texture = ExtResource( 8 )

[node name="Bars2" type="Sprite" parent="."]
position = Vector2( 39, 20 )
texture = ExtResource( 7 )

[node name="Bars1" type="Sprite" parent="."]
position = Vector2( 39, 20 )
texture = ExtResource( 6 )
